# HW_29

./: manage.py  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_selection.py  0004_alter_selection_options.py
ads/urls/: ads.py  categories.py  selections.py
datasets/: ads.json  csv_to_json.py  locations.json  users.json
djangoProject_27/: asgi.py  serializers.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: models.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_user_role.py
